--- a/site/test.html
+++ b/site/test.html
@@ -15,32 +15,18 @@
 <p>
 	
 </p>
-<p>
 <div>
-	Space is the boundless three-dimensional extent in which objects and events have relative position and direction
-</div>
-<div>
-	Physical space is often conceived in three linear dimensions, although modern physicists usually consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime.
-</div>
-<span>
-	The concept of space is considered to be of fundamental importance to an understanding of the physical universe
-</span>
-<div>
-	However, disagreement continues between philosophers over whether it is itself an entity, a relationship between entities, or part of a conceptual framework.
-</div>
-</p>
-<p>
-<div>
-	Debates concerning the nature, essence and the mode of existence of space date back to antiquity; namely, to treatises like the Timaeus of Plato, or Socrates in his reflections on what the Greeks called khôra (i.e. "space"), or in the Physics of Aristotle (Book IV, Delta) in the definition of topos (i.e. place), or in the later "geometrical conception of place" as "space qua extension" in the Discourse on Place (Qawl fi al-Makan) of the 11th-century Arab polymath Alhazen
-</div>
-<div>
-	Many of these classical philosophical questions were discussed in the Renaissance and then reformulated in the 17th century, particularly during the early development of classical mechanics.
-</div>
-<div>
-	 In Isaac Newton's view, space was absolute—in the sense that it existed permanently and independently of whether there was any matter in the space.
+	Every person, planet, stars and galaxy make up the Universe. It was formed 13.7 billion years ago. It was formed by a huge explosion called the Big Bang, the Big Bang’s creation of mass and energy to the Universe was so strong that the Universe is still expanding.
+	The Universe contains our Solar System. In our Solar System there is our own star the Sun and there are 8 planets Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, Neptune and also satellites it also contains our home the Earth.
+	The Universe also contains galaxies. The name of our galaxy is Milky Way, it contains 100 billion stars and also our Sun and it is 100 light years.
+	The Universe contains Black hole, it is a strong gravitational puller and swallowed up other stars and planets our black hole’s name is Sagittarius A*, it is millions of times bigger than the Sun .
+	There is also a event that can explode the Universe, many people think that it can’t be to make the Universe stop expanding but some cosmologist think it could be possible, they think it will shrink back to a event called the Big Crunch.
+	The Universe also contains stars, there are trillions of big stars in the Universe but we can see only 2,500 stars on a clear night sky appearing as tiny dots from Earth. The biggest star in the Universe is VY Canis Majoris. The biggest star in the Solar System is the Sun, the closest star to the Earth is Alpha Centauri. New stars are born in star nurseries-huge clouds of gas dust known as nebulae. Stars are born when the gases in a nebulae gradually gather together into spinning balls. They spin more and more quickly, until they get amazingly hot and a nuclear reaction, begins when this happens a baby star begins to glow. Stars are made of two gases hydrogen and helium. There is a event called when a really massive star dies it is called supernova. There are many types of stars including white dwarf, black dwarf, red giant and white giant. Old stars are called white dwarf, dead stars are called black dwarf, Rigel is a white giant, it is 20 times bigger than our Sun, Betelgeuse is a red giant, it 1,000 times bigger than our Sun. Sometimes stars make patterns they are called constellations etc. Orion (the hunter) is a hunter constellation named after a legendary Greek hunter other people also makes patterns as a game. The Universe also contains Pulsar stars, they are stars which can spin hundreds of times in just 1second.
+	There is a force in the Universe called gravity, it is one of the basic force like electromagnetism which is invented by a scientist named Isaac Newton.
+	In our daily life we use clock or watch to tell the time, but in the olden times like the Babylonians times they used the position of the Sun and the eclipse of the moon to tell the time and month. It is the thing that can’t stand still, but time maybe can stand still inside a black hole. Some people think that time travel possible but not as far as we know but if we could invent a machine which seemed to take us back in time it will probably take us to different Universe.
+	Some people think that there life to other planets, they think aliens must be exist. Seemed Universe is big and safe to us, but we have to take care of it esp. our Earth if we kept polluting the atmosphere in another 20th century it will just as like as it was born all living things will be dead.
 </div>
 
-</p>
 <p>
 	<img src="space.jpg" width="1200" height="600">
 </p>
