--- a/site/booklist.html
+++ b/site/booklist.html
@@ -101,6 +101,13 @@
 			<li>New Add. Mathematics – by Ho Soo Thong and Khor Nyak Hiong. Latest Edition Publisher: Pan PacificPublication Pvt. Ltd. ISBN: 9812086307</li>
 			<li>New Syllabus – Additional Maths (Seventh Edition), Consultants – Prof. Lee Peng Yee, Dr. Fan Liang HuoPublisher:Shinglee Publishers Pvt. Ltd. ISBN: 9971619954</li>
 		</ol>
+		<li><b>Bengali</b></li> 
+		<ol>
+			<li>সাহিত্য কণিকা (নতুন সংকলন ) ঢাকা বোর্ড </li>
+			<li> বাংলা একাডেমি অভিধান </li>
+		</ol>
+		 
+
 		<li><b>Art</b></li>
 		<ol>
 			<li>Oil Pastels, Water Colours, brushes, Palette and a Large Drawing Book (hard cover)</li>
