--- a/site/test.html
+++ b/site/test.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>My first HTML page</title>
+	<title>About Space</title>
 
 </head>
 <body>
 <div style="font-size: large; font-family: sans-serif; color: green">
-<font size = "10" colour="green"><center><b>Space</b></center></font>
+<font size = "10" colour="green"><center><b>The Universe</b></center></font>
 <a href="htmlfile4.html">
 	<div><font size = "6"><p align="right">Give us feedback</p></div></font>
 </a>
